--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ torch = "^1.13.1"
 numpy = "^1.24.1"
 scikit-image = "^0.19.3"
 tqdm = "^4.64.1"
-h5py = "^3.7.0"
+pillow = "^9.4.0"
 
 
 [build-system]
